plugins {
    alias libs.plugins.java.library
}

// The library version, must be kept in sync with
// com.hardbacknutter.sshclient.SshClientFactory#VERSION
version = '1.3.2'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(libs.versions.java.toolchain.get())
    }

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()

    // https://github.com/junit-team/junit5/issues/1774
    systemProperty("java.util.logging.config.file",
            "${projectDir}/src/test/resources/logging-test.properties")

    //println(getSystemProperties())

    forkEvery = 1
    testLogging {
        showStandardStreams = true
    }
}

dependencies {
    api(libs.jspecify.annotations)
    api(libs.jetbrains.annotations)

    api(libs.bouncycastle.bcprov)
    api(libs.bouncycastle.bcutil)

    testRuntimeOnly(libs.junit.platform.launcher)
    testRuntimeOnly(libs.junit.jupiter.engine)
    testImplementation(libs.junit.jupiter.api)
    testImplementation(libs.junit.jupiter.params)
}
